<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_netology2" />

    <TextView
        android:id="@+id/textTitleNetology"
        android:layout_width="250dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/textTitleNetology"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textTitleNetology"
        app:layout_constraintVertical_bias="0.47" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="imageView"
        tools:layout_editor_absoluteY="101dp" />

    <TextView
        android:id="@+id/textViewContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/text_content"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="textViewContent"
        tools:layout_editor_absoluteY="229dp" />

    <ImageView
        android:id="@+id/imageViewShare"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/textViewLikes"
        app:layout_constraintTop_toBottomOf="@+id/textViewContent"
        app:srcCompat="?attr/actionModeShareDrawable" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_foreground" />

    <ImageView
        android:id="@+id/imageViewVisibility"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewVisibility"
        app:layout_constraintTop_toBottomOf="@+id/textViewContent"
        app:srcCompat="@drawable/ic_visibility_foreground" />

    <TextView
        android:id="@+id/textViewVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_visibility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContent" />

    <TextView
        android:id="@+id/textViewShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_share"
        app:layout_constraintStart_toEndOf="@+id/imageViewShare"
        app:layout_constraintTop_toBottomOf="@+id/textViewContent" />

    <TextView
        android:id="@+id/textViewLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:text="@string/text_view_likes"
        app:layout_constraintEnd_toStartOf="@+id/imageViewLikes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageViewLikes"
        app:layout_constraintTop_toBottomOf="@+id/textViewContent" />

    <ImageView
        android:id="@+id/imageViewLikes"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewContent"
        app:srcCompat="@drawable/ic_like"
        tools:layout_editor_absoluteX="4dp" />


</androidx.constraintlayout.widget.ConstraintLayout>